force-app/main/default/objects/Consent__c/fields/Cycle_Type__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Type__c</fullName>
    <label>Consent Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Principal Consents</fullName>
                <label>Principal Consent</label>
            </value>
            <value>
                <fullName>Cycle Consent</fullName>
                <label>Cycle/Operative Consent</label>
            </value>
            <value>
                <fullName>Disposal Consent</fullName>
                <label>Counsellor&apos;s Report (Manual Upload)</label>
            </value>
            <value>
                <fullName>Financial Consent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>