force-app/main/default/objects/Consent__c/fields/Cycle_Type_as_Text__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Type_as_Text__c</fullName>
    <formula>TEXT(Cycle__r.Protocol__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cycle Type as Text</label>
    <type>Text</type>
</CustomField>