force-app/main/default/objects/Consent__c/fields/Number_of_Cycles_for_Cycle_Consent__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Cycles_for_Cycle_Consent__c</fullName>
    <formula>Cycle__r.Number_of_Cycles_for_consent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Cycles for Cycle Consent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>