force-app/main/default/objects/Consent__c/recordTypes/Counselling_Report.recordType-meta.xml
<RecordType>
    <fullName>Counselling_Report</fullName>
    <active>true</active>
    <label>Counselling Report</label>
</RecordType>