force-app/main/default/objects/Consent__c/recordTypes/Financial_Consent.recordType-meta.xml
<RecordType>
    <fullName>Financial_Consent</fullName>
    <active>true</active>
    <label>Financial Consent</label>
</RecordType>