force-app/main/default/objects/Consent__c/recordTypes/Principal_Consent.recordType-meta.xml
<RecordType>
    <fullName>Principal_Consent</fullName>
    <active>true</active>
    <label>Principal Consent</label>
</RecordType>