force-app/main/default/objects/Consent__c/listViews/BIVF_Outstanding_Consents.listView-meta.xml
<ListView>
    <fullName>BIVF_Outstanding_Consents</fullName>
    <columns>NAME</columns>
    <columns>Patient_Donor__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Consent_Signed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Valid_Consent__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Owner_Clinic_Name__c</field>
        <operation>contains</operation>
        <value>Ballarat IVF</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>12/31/2023 12:00 AM</value>
    </filters>
    <filters>
        <field>Cycle_Type__c</field>
        <operation>equals</operation>
        <value>Financial Consent</value>
    </filters>
    <label>BIVF Outstanding FCs 2024</label>
</ListView>