force-app/main/default/objects/Consent__c/listViews/Outstanding_Consents.listView-meta.xml
<ListView>
    <fullName>Outstanding_Consents</fullName>
    <columns>NAME</columns>
    <columns>Patient_Donor__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Valid_Consent__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Outstanding Consents</label>
</ListView>